# opnsense-update-notify

./: README.md  config.yml.example  main.py  opnsense-update-notify.py  pyproject.toml  schema.yml
