[tool.poetry]
name = "opnsense-update-notify"
version = "1.2.0"
description = ""
authors = ["losuler <losuler@posteo.net>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
pyyaml = "^5.3"
yamale = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
